<resources>
    <string name="app_name">VittamVino</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="init_of_settings">Initializing settings</string>
    <string name="add_wine">Add wine</string>
    <string name="search_wine">Search by wine name, type etc.</string>
    <string name="search_producer">Search producer</string>
    <string name="category_name">Name</string>
    <string name="category_producer">Producer</string>
    <string name="category_type">Type</string>
    <string name="category_flavour">Flavour</string>
    <string name="category_rating">Rating</string>
    <string name="wine_producer">Producer:\u0020</string>
    <string name="wine_type">Type:\u0020</string>
    <string name="wine_flavour">Flavour:\u0020</string>

    <string name="no_wines_found">No wines found</string>
    <string name="add_wine_name">Name</string>
    <string name="add_wine_producer">Producer</string>
    <string name="add_wine_type">Type</string>
    <string name="add_wine_flavour">Flavour</string>

    <string name="choose_producer">Choose producer</string>
    <string name="add_producer">Add producer</string>
</resources>