<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/logo_fragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.vittamvino.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_add_wine"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
            app:destination="@id/nav_add_wine" />
    </fragment>

    <fragment
        android:id="@+id/logo_fragment"
        android:name="com.example.vittamvino.ui.logo.LogoFragment"
        android:label="Logo"
        tools:layout="@layout/fragment_logo">
        <action
            android:id="@+id/action_logo_fragment_to_nav_home"
            app:enterAnim="@anim/enter_from_bottom"
            app:launchSingleTop="true"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_add_wine"
        android:name="com.example.vittamvino.ui.addWine.AddWineFragment"
        android:label="@string/add_wine"
        tools:layout="@layout/fragment_add_wine" >
        <action
            android:id="@+id/action_nav_add_wine_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_add_wine_to_nav_choose_producer"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
            app:destination="@id/nav_choose_producer" />
    </fragment>

    <fragment
        android:id="@+id/nav_choose_producer"
        android:name="com.example.vittamvino.ui.chooseProducer.ChooseProducerFragment"
        android:label="@string/choose_producer"
        tools:layout="@layout/fragment_choose_producer" >
    </fragment>


</navigation>